JPackage creator removed