@@ -2,7 +2,6 @@ plugins {
     id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.1.0'
-    id 'org.beryx.jlink' version '3.0.1'
 }
 
 group = 'av.exam'
@@ -19,8 +18,8 @@ java {
 }
 
 javafx {
-    version = "17.0.10"
-    modules = ['javafx.controls', 'javafx.fxml']
+    version = "21"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
 application {
@@ -28,33 +27,33 @@ application {
 }
 
 dependencies {
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.0'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.17.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+
+    implementation 'org.apache.poi:poi:5.4.0'
     implementation 'org.apache.poi:poi-ooxml:5.4.0'
+
+    implementation 'org.openjfx:javafx-base:win:21'
+    implementation 'org.openjfx:javafx-controls:win:21'
+    implementation 'org.openjfx:javafx-fxml:win:21'
+    implementation 'org.openjfx:javafx-graphics:win:21'
 }
 
-jlink {
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+tasks.withType(JavaCompile) {
+    options.compilerArgs += [
+            '--add-exports', 'jdk.httpserver/com.sun.net.httpserver=examdesk.av',
+            '--add-exports', 'java.net.http/java.net.http=examdesk.av'
+    ]
+}
 
-    mergedModule {
-        additive = true
-    }
+tasks.named('jar') {
+    archiveBaseName.set('Client')
+    archiveVersion.set(version)
+    destinationDirectory.set(file("$buildDir/libs"))
+}
 
-    launcher {
-        name = 'ExamDesk'
-        mainClass = 'av.entrance.client.Client'
-    }
-
-    jpackage {
-        imageName = 'ExamDesk'
-        installerName = 'ExamDesk'
-        appVersion = '1.0'
-        vendor = 'Aayush Vishwakarma'
-        installerOptions = [
-                '--type', 'msi',
-                '--win-menu',
-                '--win-shortcut',
-                '--win-dir-chooser',
-                '--icon', 'src/main/resources/av/entrance/client/images/logos/logo.ico'
-        ]
-    }
+task copyDependencies(type: Copy) {
+    from configurations.runtimeClasspath
+    into "$buildDir/libs/dependencies"
 }
